// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`framework manipulation > can format a framework to use in the renderer process 1`] = `
{
  "active": false,
  "canToggleTests": false,
  "command": "./bake",
  "id": StringMatching /\\^\\[0-9a-f\\]\\{8\\}-\\[0-9a-f\\]\\{4\\}-\\[0-5\\]\\[0-9a-f\\]\\{3\\}-\\[089ab\\]\\[0-9a-f\\]\\{3\\}-\\[0-9a-f\\]\\{12\\}\\$/i,
  "name": "Hobnobs",
  "path": "tests",
  "proprietary": {},
  "remotePath": "",
  "runsInRemote": false,
  "selected": 0,
  "sort": "name",
  "sshHost": "",
  "sshIdentity": null,
  "sshPort": null,
  "sshUser": null,
  "status": "idle",
  "type": "biscuit",
}
`;

exports[`framework manipulation > can persist a framework in a store 1`] = `
{
  "active": false,
  "canToggleTests": false,
  "command": "./bake",
  "id": StringMatching /\\^\\[0-9a-f\\]\\{8\\}-\\[0-9a-f\\]\\{4\\}-\\[0-5\\]\\[0-9a-f\\]\\{3\\}-\\[089ab\\]\\[0-9a-f\\]\\{3\\}-\\[0-9a-f\\]\\{12\\}\\$/i,
  "name": "Hobnobs",
  "path": "tests",
  "proprietary": {},
  "remotePath": "",
  "runsInRemote": false,
  "selected": 0,
  "sort": "name",
  "sshHost": "",
  "sshIdentity": null,
  "sshPort": null,
  "sshUser": null,
  "suites": [
    {
      "file": "isTasty.js",
      "meta": {},
      "tests": [
        {
          "id": "111",
          "name": "tastes sweet",
          "status": "idle",
        },
        {
          "id": "222",
          "name": "tastes oaty",
          "status": "idle",
          "tests": [
            {
              "id": "333",
              "name": "has many oats",
              "status": "idle",
            },
            {
              "id": "444",
              "name": "has jumbo oats",
              "status": "idle",
            },
          ],
        },
      ],
      "testsLoaded": true,
    },
    {
      "file": "isNobbly.js",
      "meta": {},
      "tests": [
        {
          "id": "555",
          "name": "has lumps",
          "status": "idle",
        },
      ],
      "testsLoaded": false,
    },
  ],
  "type": "biscuit",
}
`;
